# mpi-fashion-mnist

./: .gitignore  CMakeLists.txt  Makefile  main.c  mpi_main.c
data/: csv_to_bin.ipynb
src/: dataset.c  dataset.h  linalg.c  linalg.h  main.c  optim.c  optim.h  rng.c  rng.h  tensor.c  tensor.h  utils.c  utils.h
